@@ -72,7 +72,7 @@ along with this software (see the LICENSE.md file). If not, see
                 if (facilityId) searchSourceMap.query = [match: [facilityId:facilityId]]
                 // TODO: filter by productId
             </script>
-            <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="globalOut"
+            <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="globalOut"
                     in-map="[indexName:indexName, sourceMap:searchSourceMap,
                         documentTypeList:[orderItemDocumentName,prodEstimateDocumentName,assetDocumentName,runConsumeDocumentName,runProduceDocumentName]]"/>
             <log level="warn" message="========== globalOut.responseString: ${globalOut.searchResponse.toString()}"/>
@@ -98,7 +98,7 @@ along with this software (see the LICENSE.md file). If not, see
                             ]
                     ]
                 </script>
-                <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="orderItemOut"
+                <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="orderItemOut"
                         in-map="[indexName:indexName, sourceMap:searchSourceMap, documentTypeList:[orderItemDocumentName]]"/>
                 <!-- <log level="warn" message="========== searchSourceMap: ${searchSourceMap}\n orderItemOut.responseString: ${orderItemOut.searchResponse.toString()}"/> -->
             </if>
@@ -117,7 +117,7 @@ along with this software (see the LICENSE.md file). If not, see
                             ]
                     ]
                 </script>
-                <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="prodEstimateOut"
+                <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="prodEstimateOut"
                         in-map="[indexName:indexName, sourceMap:searchSourceMap, documentTypeList:[prodEstimateDocumentName]]"/>
                 <!-- <log level="warn" message="========== searchSourceMap: ${searchSourceMap}\n prodEstimateOut.responseString: ${prodEstimateOut.searchResponse.toString()}"/> -->
             </if>
@@ -139,7 +139,7 @@ along with this software (see the LICENSE.md file). If not, see
                             ]
                     ]
                 </script>
-                <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="invAssetOut"
+                <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="invAssetOut"
                         in-map="[indexName:indexName, sourceMap:searchSourceMap, documentTypeList:[assetDocumentName]]"/>
                 <!-- <log level="warn" message="========== searchSourceMap: ${searchSourceMap}\n invAssetOut.responseString: ${invAssetOut.searchResponse.toString()}"/> -->
             </if>
@@ -162,7 +162,7 @@ along with this software (see the LICENSE.md file). If not, see
                             ]
                     ]
                 </script>
-                <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="runConsumeOut"
+                <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="runConsumeOut"
                         in-map="[indexName:indexName, sourceMap:searchSourceMap, documentTypeList:[runConsumeDocumentName]]"/>
                 <!-- <log level="warn" message="========== searchSourceMap: ${searchSourceMap}\n runConsumeOut.responseString: ${runConsumeOut.searchResponse.toString()}"/> -->
             </if>
@@ -185,7 +185,7 @@ along with this software (see the LICENSE.md file). If not, see
                             ]
                     ]
                 </script>
-                <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="runProduceOut"
+                <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="runProduceOut"
                         in-map="[indexName:indexName, sourceMap:searchSourceMap, documentTypeList:[runProduceDocumentName]]"/>
                 <!-- <log level="warn" message="========== searchSourceMap: ${searchSourceMap}\n runProduceOut.responseString: ${runProduceOut.searchResponse.toString()}"/> -->
             </if>
@@ -305,7 +305,7 @@ along with this software (see the LICENSE.md file). If not, see
                     ]
                 ]
             </script>
-            <service-call name="org.moqui.impl.EntityServices.search#CountBySource" out-map="orderItemOut"
+            <service-call name="org.moqui.elasticsearch.SearchServices.search#CountBySource" out-map="orderItemOut"
                     in-map="[indexName:indexName, sourceMap:searchSourceMap, documentTypeList:[orderItemDocumentName]]"/>
             <!-- <log level="warn" message="========== searchSourceMap: ${searchSourceMap}\n orderItemOut.responseString: ${orderItemOut.searchResponse.toString()}"/> -->
             <script>
