@@ -12,6 +12,10 @@ This release is based on Moqui Framework TODO and mantle-udm TODO.
 
 New Features
 
+- Updated services in InventoryReportServices.xml to use new location for
+  the search#CountBySource service in the moqui-elasticsearch component;
+  note that this component is not needed for mantle-usl in general and is
+  not a dependency, but is needed for these services
 - Financial TimePeriod close now updated beginning and ending balances on
   all existing subsequent time periods
 - On AcctgTrans (GL) posting beginning and ending balances for future
